--- a/requirements.txt
+++ b/requirements.txt
@@ -228,3 +228,7 @@ urllib3==1.26.6
 wsproto==1.0.0
 xlrd==2.0.1
 xmltodict==0.12.0
+setuptools~=57.0.0
+argparse~=1.4.0
+tkinterhtml~=0.7
+tkinterweb~=3.13.2
